--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 
 <html>
 <head>
+  <title>Oliver Sava | Freelance Writer</title>
   <link rel="stylesheet" href="css/app.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
 </head>
 
   <div class='container'>
