--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
                 <img class="remove" alt='' width= '125px' height='70px' src='images/featured/Le Gateau.png'>
               </div>
               <div class='view-text'>
-                <p class='description'>Iterview with cabaret performer La Gateau Chocolat</p>
+                <p class='description'>Interview with cabaret performer La Gateau Chocolat</p>
                 <p class='publish-date'>Published in 2012</p>
                 <span class='tag-source'><em>Time Out Chicago</em></span>
                 <span class='tag-type'>THEATER</span>
@@ -880,7 +880,7 @@
         <a href='http://www.avclub.com/tv/young-justice/'><em>Young Justice</em></a>
       </div>
     </ul>
-    <ul>
+    <ul class="reviews">
       <span class='section-title'>TV Reviews:</span>
       <div class='comic-item'>
         <a href='http://www.avclub.com/review/adventure-time-elements-has-simple-story-strong-ch-254060'><em>Adventure Time: Elements</em></a>
@@ -901,7 +901,7 @@
         <a href='http://www.avclub.com/review/animated-vixen-breaks-new-ground-cws-arrowverse-226400'><em>Vixen</em></a>
       </div>
     </ul>
-    <ul>
+    <ul class="dvr-club">
       <span class='section-title'>DVR Club Videos:</span>
       <div class='comic-item'>
         <a href='http://www.avclub.com/video/marvels-agents-shield-need-fire-some-underperformi-219390'><em>Marvel’s Agents Of S.H.I.E.L.D.</em>, “S.O.S.”</a>
@@ -916,16 +916,16 @@
         <a href='http://www.avclub.com/video/superstar-born-rupauls-drag-race-season-finale-220274'><em>RuPaul’s Drag Race</em>, “Grand Finale”</a>
       </div>
     </ul>
-    <ul>
+    <ul class="expert">
       <span class='section-title'>Expert Witness:</span>
       <div class='comic-item'>
-        <a href='http://www.avclub.com/article/adapting-telenovela-jane-virgin-showrunner-jennie--212405'>Expert Witness interview with Jane The Virgin showrunner Jennie Snyder Urman</a>
+        <a href='http://www.avclub.com/article/adapting-telenovela-jane-virgin-showrunner-jennie--212405'>Expert Witness interview with <i>Jane The Virgin</i>J showrunner Jennie Snyder Urman</a>
       </div>
       <div class='comic-item'>
-        <a href='http://www.avclub.com/article/adventure-times-kirsten-lepore-joys-and-pains-stop-230556'>Expert Witness interview with Adventure Time stop-motion animator Kirsten Lepore</a>
+        <a href='http://www.avclub.com/article/adventure-times-kirsten-lepore-joys-and-pains-stop-230556'>Expert Witness interview with <i>Adventure Time</i> stop-motion animator Kirsten Lepore</a>
       </div>
     </ul>
-    <ul class='news-organization'>
+    <ul class='news-organization vulture'>
       <span class='vulture-title'>Vulture</span>
       <span class='section-title'>Episodic TV Recaps:</span>
       <div class='comic-item'>
@@ -937,9 +937,12 @@
       <div class='comic-item'>
         <a href='http://www.vulture.com/tv/marvel-s-the-defenders/'><em>Marvel's The Defenders</em></a>
       </div>
+       <div class='comic-item'>
+        <a href='http://www.vulture.com/tv/marvel-s-runaways/'><em>Marvel's Runaways</em></a>
+      </div>
     </ul>
-    <ul class='news-organization'>
-      <span class='section-title'>Podcasts:</span>
+    <ul class='news-organization pod-cast'>
+      <span class='section-title podcasts'>Podcasts</span>
       <div class='comic-item'>
         <a href='http://podbay.fm/show/713866088/e/1382015324?autostart=1'>Agents Of S.H.I.E.L.D.C.A.S.T. Episode #4</a>
       </div>
@@ -991,7 +994,7 @@
       <span class='comics'>Theater</span>
     </div>
     <ul class='chi-reader'>
-      <span class='section-title'>Chicago Reader</span>
+      <span class='section-title'><em>Chicago Reader</em></span>
       <div class='comic-item'>
         <a href='https://www.chicagoreader.com/chicago/the-danztheatre-playwright-festival/Event?oid=33391969'>Chicago Danztheatre Ensemble’s The Danztheatre Playwright Festival</a>
       </div>
@@ -1006,8 +1009,8 @@
       </div>
     </ul>
     <ul class='interviews'>
-      <span class='section-title'>Chicago Theater Beat</span>
-      <span class='section-title'>Selected reviews:</span>
+      <span class='section-title theater-beat'>Chicago Theater Beat</span>
+      <span class='section-title selected'>Selected reviews:</span>
       <div class='comic-item'>
         <a href='http://chicagotheaterbeat.com/2014/10/20/the-wild-party-review-bailiwick-chicago/'>Bailiwick Theatre’s <em>The Wild Party</em></a>
       </div>
@@ -1037,13 +1040,13 @@
       </div>
     </ul>
     <ul>
-      <span class='section-title'>Chicago Tribune</span>
+      <span class='section-title tribune'><em>Chicago Tribune</em></span>
       <div class='comic-item'>
         <a href='http://www.chicagotribune.com/lifestyles/parenting/chi-christmas-carol-auditions-at-goodman-20141003-story.html'>Feature on Goodman Theatre’s <em>A Christmas Carol</em></a>
       </div>
     </ul>
     <ul>
-      <span class='section-title'><em>Time Out Chicago</em></span>
+      <span class='section-title time-out'><em>Time Out Chicago</em></span>
       <span class='section-title small'>Selected Reviews:</span>
       <div class='comic-item'>
         <a href='https://www.timeout.com/chicago/theater/an-iliad-at-court-theatre-theater-review'>Circle Theatre’s <em>The Ritz</em></a>
@@ -1086,7 +1089,7 @@
       </div>
     </ul>
     <ul class='interviews'>
-      <span class='section-title'>Performer Of The Week Interviews:</span>
+      <span class='section-title performer'>Performer Of The Week Interviews:</span>
       <div class='comic-item'>
         <a href='http://www.timeout.com/chicago/theater/adrian-aguilar-performer-of-the-week'>Adrian Aguilar</a>
       </div>
@@ -1146,7 +1149,7 @@
       </div>
     </ul>
     <ul>
-      <span class='section-title'>Podcasts</span>
+      <span class='section-title podcasts'>Podcasts</span>
       <div class='comic-item'>
         <a href='http://www.chicagonow.com/the-fourth-walsh/tag/oliver-sava/'>Assorted episodes of CHIRP’s Off-Book Theater Podcast</a>
       </div>
