--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+  
 <html>
 <head>
   <title>Oliver Sava | Freelance Writer</title>
@@ -668,7 +668,7 @@
         <a href='http://www.npr.org/2012/08/15/154441182/lit-illustrated-five-fantastic-graphic-novels'>Guide to summer graphic novels</a>
       </div>
     </ul>
-    <ul>
+    <ul class="vice">
       <span class='section-title'>VICE</span>
       <div class='comic-item'>
         <a href='https://www.vice.com/en_us/article/dead-orbit-reinvigorates-the-alien-franchise-in-comic-book-form'>Interview with cartoonist James Stokoe</a>
