--- a/index.html
+++ b/index.html
@@ -292,11 +292,14 @@
       <p>I was a staff theater writer for <b><em>Time Out Chicago</b></em> and have written theater content for <a href="http://chicagotheaterbeat.com/tag/oliver-sava/"><b>Chicago Theater Beat</b></a> and <b><em>Chicago Tribune</b></em>. In 2016, I dramaturged Jackalope Theater’s <em>Prowess</em>, a new drama addressing the epidemic of violence in Chicago, which was nominated for four Jeff Awards, including Best Production and New Play, winning for New Play. You can find me on Facebook, Twitter, and Instagram.</p>
     </div>
     <div class="social-wrap">
-      <div>
-        <a href=""><img src="images/twitter.png" alt="twitter" width="18.5px" height="15px"></a>
-        <a href=""><img src="images/facebook.png" alt="facebook" width="8px" height="15px"></a>
-        <a href=""><img src="images/insta.png" alt="instagram" width="15px" height="15x"></a>
-      </div>
+      <a href=""><img src="images/twitter.png" alt="twitter" width="18.5px" height="15px"></a>
+      <a href=""><img src="images/facebook.png" alt="facebook" width="8px" height="15px"></a>
+      <a href=""><img src="images/insta.png" alt="instagram" width="15px" height="15x"></a>
+      <a href=""><img src="images/linkd.png" alt="instagram" width="15px" height="15x"></a>
+    </div>
+    <div class="resume">
+      <a href="PATH TO FILE" class="download" download="filenNameHere"> <span>Download Resumé</span></a>
+      <img src="images/download.png" width="18.25px" height="19.5px" alt="">
     </div>
   </div>
                                             <!--   F E A T U R E D -->
