add correct imgs for feat. sec.

--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
           <a href='http://herocomplex.latimes.com/comics/chip-zdarsky-steps-into-a-writers-role-with-howard-the-duck-and-kaptara/'>
             <div class='view-box'>
               <div class='image-thumb'>
-                <img class="remove" alt='' width= '125px' height='70px' src='images/featured/Ales Kot.png'>
+                <img class="remove" alt='' width= '125px' height='70px' src='images/featured/Zdarsky.png'>
               </div>
               <div class='view-text'>
                 <p class='description'>Interview with comics writer/artist Chip Zdarsky</p>
@@ -395,7 +395,7 @@
           <a href='http://www.vox.com/culture/2017/1/26/13149304/archie-comics-riverdale-evolution'>
             <div class='view-box'>
               <div class='image-thumb'>
-                <img class="remove" alt='' width= '125px' height='70px' src='images/featured/Ales Kot.png'>
+                <img class="remove" alt='' width= '125px' height='70px' src='images/featured/Archie.png'>
               </div>
               <div class='view-text'>
                 <p class='description'>Explainer on the evolution of Archie Comics:</p>
@@ -459,7 +459,7 @@
           <a href='https://tv.avclub.com/rupaul-s-drag-race-revolutionized-drag-by-bringing-it-t-1798245039'>
             <div class='view-box'>
               <div class='image-thumb'>
-                <img class="remove" alt='' width= '125px' height='70px' src='images/featured/Ales Kot.png'>
+                <img class="remove" alt='' width= '125px' height='70px' src='images/featured/Drag 100.png'>
               </div>
               <div class='view-text'>
                 <p class='description'>100 Episodes essay on <em>RuPaul's Drag Race</em></p>
@@ -475,7 +475,7 @@
           <a href='http://www.avclub.com/article/adapting-telenovela-jane-virgin-showrunner-jennie--212405'>
             <div class='view-box'>
               <div class='image-thumb'>
-                <img class="remove" alt='' width= '125px' height='70px' src='images/featured/Ales Kot.png'>
+                <img class="remove" alt='' width= '125px' height='70px' src='images/featured/Drag FOC.png'>
               </div>
               <div class='view-text'>
                 <p class='description'>For Our Consideration essay on <em>RuPaul's Drag Race</em></p>
