--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 
-      <div class='container'>
+    <div class='container'>
       <header class='cbp-scroll-header'>
         <div class='big-tri'></div>
         <div class='group-tri'></div>
@@ -70,32 +70,16 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
         <div class='work-items'>
           <div class='card-row'>
-            
-            <div class='card'>
-              <a href='https://www.avclub.com/penelope-bagieu-celebrates-history-s-rebellious-women-w-1823328464' target="_blank">
-                <div class='view-box'>
-                  <div class='image-thumb'>
-                    <img class="remove" alt='' width= '170px' height='105px' src='images/new-work-3/Brazen.png'>
-                  </div>
-                  <div class='view-text'>
-                    <p class='description'><i>Brazen: Rebel Ladies Who Rocked The World</i> Review</p>
-                    <p class='publish-date'>Published on February 27, 2018</p>
-                    <span class='tag-source'><em>The A.V. Club</em></span>
-                    <span class='tag-type'>COMICS</span>
-                  </div>
-                </div>
-              </a>
-            </div>
 
-            <div class='card'>
-              <a href='https://www.avclub.com/legends-of-tomorrow-blends-superheroes-and-pirates-for-1823347106' target="_blank">
+          <div class='card'>
+              <a href='https://www.avclub.com/dc-s-legends-of-tomorrow-stumbles-into-stupidity-with-e-1823719591' target="_blank">
                 <div class='view-box'>
                   <div class='image-thumb'>
-                    <img class="remove" alt='' width= '170px' height='105px' src='images/new-work-3/Legends.png'>
+                    <img class="remove" alt='' width= '170px' height='105px' src='images/new-work-4/Legends.png'>
                   </div>
                   <div class='view-text'>
-                    <p class='description'><i>DC's Legends Of Tomorrow</i> "The Curse Of The Earth Totem" Recap</p>
-                    <p class='publish-date'>Published on February 26, 2018</p>
+                    <p class='description'><i>DC's Legends Of Tomorrow</i> "Amazing Grace" Recap</p>
+                    <p class='publish-date'>Published on March 12, 2018</p>
                     <span class='tag-source'><em>The A.V. Club</em></span>
                     <span class='tag-type'>TV</span>
                   </div>
@@ -104,14 +88,47 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </div>
 
             <div class='card'>
-              <a href='https://www.avclub.com/a-fantastic-quartet-assembles-in-this-the-terrifics-1-1823322726' target="_blank">
+              <a href='https://www.avclub.com/eternity-girl-longs-for-death-she-cannot-have-in-this-e-1823697949' target="_blank">
                 <div class='view-box'>
                   <div class='image-thumb'>
-                    <img class="remove" alt='' width= '170px' height='105px' src='images/new-work-3/Terrific.png'>
+                    <img  class="remove" alt='' width= '170px' height='105px' src='images/new-work-4/Eternity.png'>
                   </div>
                   <div class='view-text'>
-                    <p class='description'><i>The Terrifics</i> #1 Preview</p>
-                    <p class='publish-date'>Published on February 26, 2018</p>
+                    <p class='description'><i>Eternity Girl</i> #1 Preview</p>
+                    <p class='publish-date'>Published on March 12, 2018</p>
+                    <span class='tag-source'><em>The A.V. Club</em></span>
+                    <span class='tag-type'>COMICS</span>
+                </div>
+              </div>
+            </a>
+          </div>
+
+            <div class='card'>
+              <a href='https://www.avclub.com/jane-the-virgin-battles-her-inner-critic-in-a-confident-1823662528' target="_blank">
+                <div class='view-box'>
+                  <div class='image-thumb'>
+                    <img class="remove" alt='' width= '170px' height='105px' src='images/new-work-4/Jane.png'>
+                  </div>
+                  <div class='view-text'>
+                    <p class='description'><i>Jane The Virgin</i> "Chapter Seventy-Six" Review</p>
+                    <p class='publish-date'>Published on March 9, 2018</p>
+                    <span class='tag-source'><em>The A.V. Club</em></span>
+                    <span class='tag-type'>TV</span>
+                  </div>
+                </div>
+              </a>
+            </div>
+
+
+            <div class='card'>
+              <a href='https://https://www.avclub.com/eleanor-davis-asks-why-art-in-her-enlightening-graphic-1823619895' target="_blank">
+                <div class='view-box'>
+                  <div class='image-thumb'>
+                    <img class="remove" alt='' width= '170px' height='105px' src='images/new-work-4/Why Art.png'>
+                  </div>
+                  <div class='view-text'>
+                    <p class='description'><i>Why Art?</i> Big Issues</p>
+                    <p class='publish-date'>Published on March 9, 2018</p>
                     <span class='tag-source'><em>The A.V. Club</em></span>
                     <span class='tag-type'>COMICS</span>
                   </div>
@@ -120,14 +137,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </div>
 
             <div class='card'>
-              <a href='https://www.avclub.com/twisted-romance-blends-genres-styles-and-media-for-a-1823238473' target="_blank">
+              <a href='https://www.avclub.com/riverdale-s-rich-girl-gets-a-horror-makeover-in-this-va-1823641800' target="_blank">
                 <div class='view-box'>
                   <div class='image-thumb'>
-                    <img class="remove" alt='' width= '170px' height='105px' src='images/new-work-3/Romance.png'>
+                    <img class="remove" alt='' width= '170px' height='105px' src='images/new-work-4/Vampironica.png'>
                   </div>
                   <div class='view-text'>
-                    <p class='description'><i>Twisted Romance</i> Big Issues</p>
-                    <p class='publish-date'>Published on February 23, 2018</p>
+                    <p class='description'><i>Vampironica</i> #1 Preview</p>
+                    <p class='publish-date'>Published on March 9, 2018</p>
                     <span class='tag-source'><em>The A.V. Club</em></span>
                     <span class='tag-type'>COMICS</span>
                   </div>
@@ -136,14 +153,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </div>
      
             <div class='card'>
-              <a href='https://www.avclub.com/drag-race-all-stars-continues-to-meander-with-a-disappo-1823249395' target="_blank">
+              <a href='https://www.avclub.com/a-messy-predictable-drag-race-all-stars-fails-to-build-1823630354' target="_blank">
                 <div class='view-box'>
                   <div class='image-thumb'>
-                    <img class="remove" alt='' width= '170px' height='105px' src='images/new-work-3/Drag.png'>
+                    <img class="remove" alt='' width= '170px' height='105px' src='images/new-work-4/RuPaul.png'>
                   </div>
                   <div class='view-text'>
-                    <p class='description'><i>RuPaul's Drag Race All Stars</i> "Pop Art Ball" Review</p>
-                    <p class='publish-date'>Published on February 22, 2018</p>
+                    <p class='description'><i>RuPaul's Drag Race All Stars</i> "My Best Squirrelfriend's Dragsmaids Wedding Trip” Review</p>
+                    <p class='publish-date'>Published on March 8, 2018</p>
                     <span class='tag-source'><em>The A.V. Club</em></span>
                     <span class='tag-type'>TV</span>
                   </div>
@@ -152,20 +169,36 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </div>
 
             <div class='card'>
-              <a href='https://www.avclub.com/america-chavez-gets-a-power-boost-in-this-america-final-1823243300' target="_blank">
+              <a href='https://www.avclub.com/delve-into-laura-s-murderous-past-in-this-all-new-wolve-1823624167' target="_blank">
                 <div class='view-box'>
                   <div class='image-thumb'>
-                    <img  class="remove" alt='' width= '170px' height='105px' src='images/new-work-3/America.png'>
+                    <img  class="remove" alt='' width= '170px' height='105px' src='images/new-work-4/Wolverine.png'>
                   </div>
                   <div class='view-text'>
-                    <p class='description'><i>America</i> #12 Preview</p>
-                    <p class='publish-date'>Published on February 22, 2018</p>
+                    <p class='description'><i>All-New Wolverine</i> #32 Preview</p>
+                    <p class='publish-date'>Published on March 8, 2018</p>
                     <span class='tag-source'><em>The A.V. Club</em></span>
                     <span class='tag-type'>COMICS</span>
                 </div>
               </div>
             </a>
           </div>
+
+            <div class='card'>
+              <a href='https://www.chicagoreader.com/Bleader/archives/2018/03/09/cloud-gate-dance-theatre-combines-words-history-and-movement-in-formosa' target="_blank">
+                <div class='view-box'>
+                  <div class='image-thumb'>
+                    <img class="remove" alt='' width= '170px' height='105px' src='images/new-work-4/Cloud Gate.png'>
+                  </div>
+                  <div class='view-text'>
+                    <p class='description'>Cloud Gate Dance Theatre's <i>Formosa</i> Preview </p>
+                    <p class='publish-date'>Published on March 1, 2018</p>
+                    <span class='tag-source'><em>Chicago Reader</em></span>
+                    <span class='tag-type'>DANCE</span>
+                  </div>
+                </div>
+              </a>
+            </div>
 
             <div class='card'>
               <a href='http://www.vulture.com/2018/01/marvels-runaways-season-1-finale-recap.html' target="_blank">
@@ -271,8 +304,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <span class='about'>About</span>
         </div>
         <div class='about-text'>
-          <p>I’m a Chicago-based freelance pop culture critic and journalist who covers comic books, television, and theater. I have written for <a href="http://www.avclub.com/author/Oliver%20Sava/"><b><em>The A.V. Club</b></em></a> (where I was twice nominated for the Best Comics-Related Journalism/Periodical Eisner Award in 2012 and 2017, winning in 2017), <a href="http://herocomplex.latimes.com/tag/oliver-sava/"><b><em>The Los Angeles Times</b></em></a>, <b>Vox.com</b>, <b>NPR Books</b>, and <a href="http://nymag.com/author/Oliver%20Sava/"><b>VICE</b></a>. I also write TV recaps and reviews for <em>The A.V. Club</em> and <b>Vulture</b>.</p>
-          <p>I was a staff theater writer for <b><em>Time Out Chicago</b></em> and have written theater content for <a href="http://chicagotheaterbeat.com/tag/oliver-sava/"><b>Chicago Theater Beat</b></a> and <b><em>Chicago Tribune</b></em>. In 2016, I dramaturged Jackalope Theater’s <em>Prowess</em>, a new drama addressing the epidemic of violence in Chicago, which was nominated for four Jeff Awards, including Best Production and New Play, winning for New Play. You can find me on Facebook, Twitter, and Instagram.</p>
+          <p>I’m a Chicago-based freelance pop culture critic and journalist who covers comic books, television, and theater. I have written for <a href="http://www.avclub.com/author/Oliver%20Sava/"><b><em>The A.V. Club</b></em></a> (where I was twice nominated for the Best Comics-Related Journalism/Periodical Eisner Award in 2012 and 2017, winning in 2017), <a href="http://herocomplex.latimes.com/tag/oliver-sava/"><b><em>The Los Angeles Times</b></em></a>, <b>Vox.com</b>, <b>NPR Books</b>, <b>Rolling Stone</b>, <b>The Verge</b>, and <a href="http://nymag.com/author/Oliver%20Sava/"><b>VICE</b></a>. I also write TV recaps and reviews for <em>The A.V. Club</em> and <b>Vulture</b>.</p>
+          <p>I was a staff theater writer for <b><em>Time Out Chicago</b></em> and have written dance and theater content for <a href="http://chicagotheaterbeat.com/tag/oliver-sava/"><b>Chicago Theater Beat</b></a>, <b><em>Chicago Tribune</b></em>, and <b><em>Chicago Reader</b></em>. I was the dramaturg of Jackalope Theater’s <em>Prowess</em>, a new drama addressing the epidemic of violence in Chicago, which was nominated for four Jeff Awards, including Best Production and New Play, winning for New Play. I am also the founder and co-mentor of The Key, an arts criticism mentorship program for Chicago youth. You can find me on Facebook, Twitter, Instagram, and LinkedIn.</p>
         </div>
         <div class="social-wrap">
           <div>
@@ -937,6 +970,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <div class='comic-item'>
             <a href='http://www.blogtalkradio.com/graphicpolicy/2016/01/28/jonesing-for-jessica-episode-11-aka-ive-got-the-blues'>Jonesing For Jessica Episode #11</a>
           </div>
+          <div class='comic-item'>
+            <a href='https://www.usatoday.com/story/life/tv/2017/12/01/mothership-tagging-along-marvels-runaways/914238001/'><i>USA Today</i> Mothership "Tagging Along with Marvel's <i>Runaways</i></a>
+          </div>
         </ul>
       </div>
       <div id='dance'>
@@ -971,6 +1007,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           </div>
           <div class='item'>
             <a href='https://www.chicagoreader.com/Bleader/archives/2018/02/08/ayako-kato-creates-a-radical-dance-experiment-in-silence-and-stillness'>Akano Kato’s <em>stück 1998 / anchor 2018</em> Preview</a>
+          </div>
+          <div class='item'>
+            <a href='https://www.chicagoreader.com/Bleader/archives/2018/03/09/cloud-gate-dance-theatre-combines-words-history-and-movement-in-formosa'>Cloud Gate Dance Theatre’s <em>Formosa</em> Preview</a>
           </div>
         </ul>
         <ul class='list'>
@@ -1040,6 +1079,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           </div>
           <div class='comic-item'>
             <a href='https://www.chicagoreader.com/Bleader/archives/2018/02/02/the-chicago-musical-theatre-festival-is-like-an-in-person-netflix-binge'>Underscore Theatre Company's Chicago Musical Theatre Festival Preview</a>
+          </div>
+          <div class='comic-item'>
+            <a href='https://www.chicagoreader.com/chicago/southern-gothic/Event?oid=41512054'>Windy City Playhouse's <em>Southern Gothic</em> Review</a>
           </div>
         </ul>
         <ul class='interviews'>
