and new work 5 images

--- a/index.html
+++ b/index.html
@@ -72,14 +72,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <div class='card-row'>
 
           <div class='card'>
-              <a href='https://www.avclub.com/dc-s-legends-of-tomorrow-stumbles-into-stupidity-with-e-1823719591' target="_blank">
+              <a href='https://tv.avclub.com/legends-of-tomorrow-brings-in-john-noble-for-an-unbelie-1824273275' target="_blank">
                 <div class='view-box'>
                   <div class='image-thumb'>
-                    <img class="remove" alt='' width= '170px' height='105px' src='images/new-work-4/Legends.png'>
+                    <img class="remove" alt='' width= '170px' height='105px' src='images/new-work-5/Legends.png'>
                   </div>
                   <div class='view-text'>
-                    <p class='description'><i>DC's Legends Of Tomorrow</i> "Amazing Grace" Recap</p>
-                    <p class='publish-date'>Published on March 12, 2018</p>
+                    <p class='description'><i>DC's Legends Of Tomorrow</i> "Guest Starring John Noble" Recap</p>
+                    <p class='publish-date'>Published on April 2, 2018</p>
                     <span class='tag-source'><em>The A.V. Club</em></span>
                     <span class='tag-type'>TV</span>
                   </div>
@@ -88,14 +88,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </div>
 
             <div class='card'>
-              <a href='https://www.avclub.com/eternity-girl-longs-for-death-she-cannot-have-in-this-e-1823697949' target="_blank">
+              <a href='https://www.avclub.com/shade-the-changing-woman-has-an-identity-crisis-in-thi-1824254134' target="_blank">
                 <div class='view-box'>
                   <div class='image-thumb'>
                     <img  class="remove" alt='' width= '170px' height='105px' src='images/new-work-4/Eternity.png'>
                   </div>
                   <div class='view-text'>
-                    <p class='description'><i>Eternity Girl</i> #1 Preview</p>
-                    <p class='publish-date'>Published on March 12, 2018</p>
+                    <p class='description'><i>Shade, The Changing Woman</i> #2 Preview</p>
+                    <p class='publish-date'>Published on April 2, 2018</p>
                     <span class='tag-source'><em>The A.V. Club</em></span>
                     <span class='tag-type'>COMICS</span>
                 </div>
@@ -104,47 +104,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           </div>
 
             <div class='card'>
-              <a href='https://www.avclub.com/jane-the-virgin-battles-her-inner-critic-in-a-confident-1823662528' target="_blank">
+              <a href='https://www.avclub.com/sonic-the-hedgehog-speeds-into-a-new-series-in-this-exc-1824209500' target="_blank">
                 <div class='view-box'>
                   <div class='image-thumb'>
-                    <img class="remove" alt='' width= '170px' height='105px' src='images/new-work-4/Jane.png'>
+                    <img class="remove" alt='' width= '170px' height='105px' src='images/new-work-5/Sonic.png'>
                   </div>
                   <div class='view-text'>
-                    <p class='description'><i>Jane The Virgin</i> "Chapter Seventy-Six" Review</p>
-                    <p class='publish-date'>Published on March 9, 2018</p>
-                    <span class='tag-source'><em>The A.V. Club</em></span>
-                    <span class='tag-type'>TV</span>
-                  </div>
-                </div>
-              </a>
-            </div>
-
-
-            <div class='card'>
-              <a href='https://https://www.avclub.com/eleanor-davis-asks-why-art-in-her-enlightening-graphic-1823619895' target="_blank">
-                <div class='view-box'>
-                  <div class='image-thumb'>
-                    <img class="remove" alt='' width= '170px' height='105px' src='images/new-work-4/Why Art.png'>
-                  </div>
-                  <div class='view-text'>
-                    <p class='description'><i>Why Art?</i> Big Issues</p>
-                    <p class='publish-date'>Published on March 9, 2018</p>
-                    <span class='tag-source'><em>The A.V. Club</em></span>
-                    <span class='tag-type'>COMICS</span>
-                  </div>
-                </div>
-              </a>
-            </div>
-
-            <div class='card'>
-              <a href='https://www.avclub.com/riverdale-s-rich-girl-gets-a-horror-makeover-in-this-va-1823641800' target="_blank">
-                <div class='view-box'>
-                  <div class='image-thumb'>
-                    <img class="remove" alt='' width= '170px' height='105px' src='images/new-work-4/Vampironica.png'>
-                  </div>
-                  <div class='view-text'>
-                    <p class='description'><i>Vampironica</i> #1 Preview</p>
-                    <p class='publish-date'>Published on March 9, 2018</p>
+                    <p class='description'><i>Sonic The Hedgehog</i> #1 Preview</p>
+                    <p class='publish-date'>Published on March 30, 2018</p>
                     <span class='tag-source'><em>The A.V. Club</em></span>
                     <span class='tag-type'>COMICS</span>
                   </div>
@@ -153,14 +120,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </div>
      
             <div class='card'>
-              <a href='https://www.avclub.com/a-messy-predictable-drag-race-all-stars-fails-to-build-1823630354' target="_blank">
+              <a href='https://tv.avclub.com/an-odd-drag-race-challenge-is-redeemed-by-the-queens-o-1824192060' target="_blank">
                 <div class='view-box'>
                   <div class='image-thumb'>
-                    <img class="remove" alt='' width= '170px' height='105px' src='images/new-work-4/RuPaul.png'>
+                    <img class="remove" alt='' width= '170px' height='105px' src='images/new-work-5/RuPaul.png'>
                   </div>
                   <div class='view-text'>
-                    <p class='description'><i>RuPaul's Drag Race All Stars</i> "My Best Squirrelfriend's Dragsmaids Wedding Trip” Review</p>
-                    <p class='publish-date'>Published on March 8, 2018</p>
+                    <p class='description'><i>RuPaul's Drag Race</i> "PharmaRusical” Review</p>
+                    <p class='publish-date'>Published on March 29, 2018</p>
                     <span class='tag-source'><em>The A.V. Club</em></span>
                     <span class='tag-type'>TV</span>
                   </div>
@@ -169,14 +136,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </div>
 
             <div class='card'>
-              <a href='https://www.avclub.com/delve-into-laura-s-murderous-past-in-this-all-new-wolve-1823624167' target="_blank">
+              <a href='https://www.avclub.com/the-new-mutants-investigate-an-arctic-attack-in-this-ex-1824193768' target="_blank">
                 <div class='view-box'>
                   <div class='image-thumb'>
-                    <img  class="remove" alt='' width= '170px' height='105px' src='images/new-work-4/Wolverine.png'>
+                    <img  class="remove" alt='' width= '170px' height='105px' src='images/new-work-5/Mutants.png'>
                   </div>
                   <div class='view-text'>
-                    <p class='description'><i>All-New Wolverine</i> #32 Preview</p>
-                    <p class='publish-date'>Published on March 8, 2018</p>
+                    <p class='description'><i>New Mutants: Dead Souls</i> #2 Preview</p>
+                    <p class='publish-date'>Published on March 29, 2018</p>
                     <span class='tag-source'><em>The A.V. Club</em></span>
                     <span class='tag-type'>COMICS</span>
                 </div>
@@ -185,14 +152,62 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           </div>
 
             <div class='card'>
-              <a href='https://www.chicagoreader.com/Bleader/archives/2018/03/09/cloud-gate-dance-theatre-combines-words-history-and-movement-in-formosa' target="_blank">
+              <a href='https://www.avclub.com/judas-gives-the-biblical-betrayer-a-striking-redemption-1824095302' target="_blank">
                 <div class='view-box'>
                   <div class='image-thumb'>
-                    <img class="remove" alt='' width= '170px' height='105px' src='images/new-work-4/Cloud Gate.png'>
+                    <img class="remove" alt='' width= '170px' height='105px' src='images/new-work-5/Judas.png'>
                   </div>
                   <div class='view-text'>
-                    <p class='description'>Cloud Gate Dance Theatre's <i>Formosa</i> Preview </p>
-                    <p class='publish-date'>Published on March 1, 2018</p>
+                    <p class='description'><i>Judas</i> Comics Panel Review</p>
+                    <p class='publish-date'>Published on March 28, 2018</p>
+                    <span class='tag-source'><em>The A.V. Club</em></span>
+                    <span class='tag-type'>COMICS</span>
+                  </div>
+                </div>
+              </a>
+            </div>
+
+            <div class='card'>
+              <a href='https://tv.avclub.com/a-jane-the-virgin-tearjerker-spotlights-the-greatness-o-1824038331' target="_blank">
+                <div class='view-box'>
+                  <div class='image-thumb'>
+                    <img class="remove" alt='' width= '170px' height='105px' src='images/new-work-5/Xo.png'>
+                  </div>
+                  <div class='view-text'>
+                    <p class='description'><i>Jane The Virgin</i> "Chapter Seventy-Eight" Review</p>
+                    <p class='publish-date'>Published on March 23, 2018</p>
+                    <span class='tag-source'><em>The A.V. Club</em></span>
+                    <span class='tag-type'>TV</span>
+                  </div>
+                </div>
+              </a>
+            </div>
+
+            <div class='card'>
+              <a href='https://www.avclub.com/green-lantern-earth-one-spotlights-how-dc-comics-is-lo-1823995385' target="_blank">
+                <div class='view-box'>
+                  <div class='image-thumb'>
+                    <img class="remove" alt='' width= '170px' height='105px' src='images/new-work-5/Green.png'>
+                  </div>
+                  <div class='view-text'>
+                    <p class='description'><i>Green Lantern: Earth One</i> Big Issues</p>
+                    <p class='publish-date'>Published on March 23, 2018</p>
+                    <span class='tag-source'><em>The A.V. Club</em></span>
+                    <span class='tag-type'>COMICS</span>
+                  </div>
+                </div>
+              </a>
+            </div>
+
+            <div class='card'>
+              <a href='https://www.chicagoreader.com/Bleader/archives/2018/03/28/the-process-v-product-festival-at-columbia-college-demystifies-the-art-of-choreography' target="_blank">
+                <div class='view-box'>
+                  <div class='image-thumb'>
+                    <img class="remove" alt='' width= '170px' height='105px' src='images/new-work-5/Process.png'>
+                  </div>
+                  <div class='view-text'>
+                    <p class='description'>Dance Center of Columbia College Chicago Process V. Product Festival Preview</p>
+                    <p class='publish-date'>Published on March 28, 2018</p>
                     <span class='tag-source'><em>Chicago Reader</em></span>
                     <span class='tag-type'>DANCE</span>
                   </div>
@@ -201,16 +216,16 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </div>
 
             <div class='card'>
-              <a href='http://www.vulture.com/2018/01/marvels-runaways-season-1-finale-recap.html' target="_blank">
+              <a href='https://www.chicagoreader.com/Bleader/archives/2018/03/23/in-april-see-chicago-dance-wants-the-whole-city-to-well-you-know' target="_blank">
                 <div class='view-box'>
                   <div class='image-thumb'>
-                    <img  class="remove" alt='' width= '170px' height='105px' src='images/new-work-2/Hostile.png'>
+                    <img class="remove" alt='' width= '170px' height='105px' src='images/new-work-5/ChiDance.png'>
                   </div>
                   <div class='view-text'>
-                    <p class='description'>Marvel’s Runaways “Hostile” Recap</p>
-                    <p class='publish-date'>Published on January 9, 2018</p>
-                    <span class='tag-source'><em>Vulture</em></span>
-                    <span class='tag-type'>TV</span>
+                    <p class='description'>Chicago Dance Month Preview</p>
+                    <p class='publish-date'>Published on March 23, 2018</p>
+                    <span class='tag-source'><em>Chicago Reader</em></span>
+                    <span class='tag-type'>DANCE</span>
                   </div>
                 </div>
               </a>
@@ -1082,6 +1097,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           </div>
           <div class='comic-item'>
             <a href='https://www.chicagoreader.com/chicago/southern-gothic/Event?oid=41512054'>Windy City Playhouse's <em>Southern Gothic</em> Review</a>
+          </div>
+          <div class='comic-item'>
+            <a href='https://www.chicagoreader.com/chicago/the-spitfire-grill/Event?oid=44178742'>Refuge Theatre Project's <em>The Spitfire Grill</em> Review</a>
           </div>
         </ul>
         <ul class='interviews'>
