--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <a href='https://www.avclub.com/shade-the-changing-woman-has-an-identity-crisis-in-thi-1824254134' target="_blank">
                 <div class='view-box'>
                   <div class='image-thumb'>
-                    <img  class="remove" alt='' width= '170px' height='105px' src='images/new-work-4/Eternity.png'>
+                    <img  class="remove" alt='' width= '170px' height='105px' src='images/new-work-5/Shade.png'>
                   </div>
                   <div class='view-text'>
                     <p class='description'><i>Shade, The Changing Woman</i> #2 Preview</p>
